--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- order form -->
     <div class="container my-5">
         <h1 class="text-center mb-4">Order</h1>
-        <form action="g6backend.42web.io/submit.php" method="POST">
+        <form action="https://g6backend.42web.io/submit.php" method="POST">
 
             <!-- Name Input -->
             <div class="mb-3">
